# FermiGates

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  architecture.md  development.md
examples/: example_MLP_mnist.py  example_MLP_mnist_nb.ipynb  example_cnn_fashion_mnist_direct.py  example_fermiTransformer.ipynb  example_fermigates_MLP.ipynb  example_transformer_cifar10.py  train_conv_synthetic.py  train_mlp_fermi_objective.py  train_mlp_synthetic.py
examples/notebooks/: example_golu.ipynb  transformer_toy_forward.py
examples/standalone/: FermiDiracMasking.ipynb
fermigates/: __init__.py
fermigates/base/: __init__.py  annealers.py  base.py
fermigates/calibration/: linear_calibration.py
fermigates/datasets/: __init__.py  cifar10_tokens.py  fashion_mnist.py  mnist.py
fermigates/examples/: example_fermiTransformer.ipynb  example_fermigates_MLP.ipynb
fermigates/experiments/: experiment.py
fermigates/export/: __init__.py  pruning.py
fermigates/gates/: __init__.py  _base.py  base.py  concrete.py  fermi.py  structured.py
fermigates/layers/: __init__.py  _base.py  attention.py  blocks.py  conv_2d.py  linear.py
fermigates/layers/calibration/: __init__.py  linear_calibration.py
fermigates/layers/conv_layers/: __init__.py  fermi_conv.py
fermigates/layers/linear_layers/: __init__.py  fermilayer.py
fermigates/layers/transformer/: __init__.py  encoder.py
fermigates/losses/: __init__.py  fermi.py  regularizers.py
fermigates/masks/: __init__.py  fermimask.py  glu_mask.py  grouplasso_mask.py  magnitude_mask.py
fermigates/metrics/: __init__.py  tracking.py
fermigates/models/: __init__.py  cnn.py  fgbnn.ipynb  mlp.py  transformer.py
fermigates/tests/test_base/: test_base.py
fermigates/tests/test_calibration/: test_calibration.py  test_linear_calibration.py
fermigates/tests/test_datasets/: test_cifar10_tokens_dataset.py  test_csv_datasets.py  test_fashion_mnist_dataset.py
fermigates/tests/test_examples/: test_training_example.py
fermigates/tests/test_gates/: test_base.py  test_fermi.py  test_gates.py
fermigates/tests/test_losses/: test_losses.py
fermigates/training/: __init__.py  controllers.py  schedules.py
tests/: test_base_and_compat.py  test_calibration.py  test_gates.py  test_layers.py  test_regularizers.py
(+8 files in other folders)
