[project]
name = "fermigates"
version = "0.2.0"
description = "Fermi-gated layers, models, and calibration utilities for differentiable pruning research"
readme = "README.md"

authors = [
    { name = "Raunak Dev", email = "raunak.r.dev@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]
keywords = ["deep-learning", "pruning", "gating", "pytorch", "sparsity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/DARHWOLF/FermiGates"
Repository = "https://github.com/DARHWOLF/FermiGates"
Issues = "https://github.com/DARHWOLF/FermiGates/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "black>=24.0",
    "isort>=5.13",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]

[tool.pytest.ini_options]
minversion = "8.0"
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
